src/test/ui/span/borrowck-fn-in-const-b.nll.stderr
error[E0596]: cannot borrow immutable item `*x` as mutable
  --> $DIR/borrowck-fn-in-const-b.rs:17:9
   |
LL |         x.push(format!("this is broken"));
   |         ^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
